kubernetes/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: notes-app
spec:
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
